# conab-crop-progress

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update.yml
conab_crop_progress/: __init__.py  cli.py  config.py  parser.py  pipeline.py  scraper.py  translator.py
data/output/: conab_crop_progress.csv  conab_crop_progress.parquet
tests/: test_parser.py
