[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conab-crop-progress"
version = "0.1.0"
description = "ETL pipeline for CONAB (Brazil) crop progress data"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "openpyxl>=3.1",
    "pandas>=2.1",
    "click>=8.1",
    "pyarrow>=14.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
conab-crop-progress = "conab_crop_progress.cli:main"

[tool.setuptools.packages.find]
include = ["conab_crop_progress*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
